# simple-image-interface-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: example.rs  examples.rs  video_test.rs
src/: camera.rs  interface.rs  lib.rs  main.rs  picture.rs  simple_image_interface.rs  video.rs
src/interface/: video.rs
tests/: tests.rs
