[package]
name = "simple_image_interface"
version = "0.1.5"
description = "Simple image interface with pictures, video, and camera."
keywords = ["camera", "video", "image", "webcam"]
authors = ["scepter914 <scepter914@gmail.com>"]
repository = "https://github.com/scepter914/simple_image_interface"
documentation = "https://docs.rs/simple_image_interface"
license = "MIT"
readme = "README.md"
edition = "2018"
exclude = ["data/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "4.4.0"
image = "0.23.14"
log = "0.4.0"
simplelog = "0.10.0"
rscam = "0.5.5"
