[package]
name = "simple_image_interface"
version = "0.1.6"
description = "Simple image interface with pictures, video, and camera."
keywords = ["camera", "video", "image", "webcam"]
authors = ["scepter914 <scepter914@gmail.com>"]
repository = "https://github.com/scepter914/simple_image_interface"
documentation = "https://docs.rs/simple_image_interface"
license = "MIT"
readme = "README.md"
edition = "2018"
exclude = ["data/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "6.1.1"
image = "0.24.7"
log = "0.4.0"
simplelog = "0.12.1"
rscam = "0.5.5"
