[package]
name = "simple_image_interface"
version = "0.1.6"
edition = "2021"

license = "MIT"
description = "Simple image interface with pictures, video, and camera."
authors = ["scepter914 <scepter914@gmail.com>"]
readme = "README.md"

repository = "https://github.com/scepter914/simple_image_interface"
documentation = "https://docs.rs/simple_image_interface"
keywords = ["camera", "video", "image", "webcam"]
exclude = ["data/*"]

[dependencies]
ffmpeg-next = "7.1.0"
image = "0.25.2"
log = "0.4.20"
simplelog = "0.12.1"
rscam = "0.5.3"
